# numerical_methods

./: CMakeLists.txt  README.md  main.cpp
include/: Runge_Kutta.hpp  base_meta_func.hpp  diff_equation.hpp  integrate_meta.hpp  simply_meta.hpp
